--- a/src/app/dashboard/layout/components/footer/footer.component.html
+++ b/src/app/dashboard/layout/components/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="footer tw-bg-white tw-p-4 tw-text-center tw-mt-2">
-  <span class="tw-text-gray-700">Thank you for watching! <i class="icon icon-like-f tw-text-red-500"></i> </span>
+  <span class="tw-text-gray-700">Footer! <i class="icon icon-like-f tw-text-red-500"></i> </span>
 </div>
