--- a/src/app/dashboard/layout/components/header/header.component.html
+++ b/src/app/dashboard/layout/components/header/header.component.html
@@ -1,7 +1,7 @@
 <div class=" header tw-bg-[#94A684] ">
-  <div class="tw-container tw-mx-auto tw-p-5 flex-c-b">
+  <div class="tw-container tw-mx-auto tw-py-4 flex-c-b">
     <div>
-      <h1 class="tw-font-quraanFont tw-text-4xl tw-text-white tw-drop-shadow-lg tw-mb-0">قرءان كريم</h1>
+      <h1 class="tw-font-quraanFont tw-text-2xl tw-text-white tw-drop-shadow-lg tw-mb-0">قرءان كريم</h1>
     </div>
     <!-- search -->
     <div class="flex-box tw-gap-2">
