--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<div>
+<div >
+    <div class="tw-sticky tw-top-0 tw-z-10">
+        <app-layout></app-layout>
+    </div>
     <router-outlet></router-outlet>
 </div>
