--- a/src/app/dashboard/layout/layout.component.html
+++ b/src/app/dashboard/layout/layout.component.html
@@ -1,7 +1,7 @@
 <div>
   <app-header></app-header>
 </div>
-<div>
+<div  class="tw-container tw-mx-auto tw-py-10">
   <router-outlet></router-outlet>
 </div>
 <div>
