--- a/src/app/dashboard/layout/layout.component.html
+++ b/src/app/dashboard/layout/layout.component.html
@@ -1,9 +1,9 @@
-<div>
+<div class="tw-sticky tw-top-0 tw-z-10 tw-shadow-xl3">
   <app-header></app-header>
 </div>
-<div  class="tw-container tw-mx-auto tw-py-10">
+<div class="tw-container tw-mx-auto tw-py-10 tw-border tw-border-gray-200 tw-my-4 tw-bg-white tw-p-5 tw-mb-[80px]">
   <router-outlet></router-outlet>
 </div>
-<div>
+<div class="tw-fixed tw-bottom-0 tw-w-full">
   <app-footer></app-footer>
 </div>
