--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
-<div >
-    <div class="tw-sticky tw-top-0 tw-z-10">
-        <app-layout></app-layout>
+<div>
+    <app-layout></app-layout>
+    <div class="tw-container">
+        <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-scale-multiple">
+            <p style="font-size: 20px; color: white">Loading...</p>
+        </ngx-spinner>
     </div>
     <router-outlet></router-outlet>
 </div>
