--- a/src/app/dashboard/listen/components/form/form.component.html
+++ b/src/app/dashboard/listen/components/form/form.component.html
@@ -4,7 +4,7 @@
       <label class="tw-text-xs tw-font-medium tw-mb-2 tw-block">اسم السورة</label>
       <div class="flex-box tw-gap-2">
         <mat-form-field appearance="outline"
-          class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0 tw-bg-white tw-border tw-border-gray-200 tw-rounded-md">
+          class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0 tw-bg-white tw-rounded-md">
           <mat-label class="tw-text-sm">من</mat-label>
           <span matSuffix
             class="sfi sfi-arrow-down tw-text-gray-500 tw-font-medium tw-mt-[-5px] tw-block tw-text-xs"></span>
@@ -16,7 +16,7 @@
 
         <!-- إلى سورة -->
         <mat-form-field appearance="outline"
-          class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0 tw-bg-white tw-border tw-border-gray-200 tw-rounded-md">
+          class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0 tw-bg-white tw-rounded-md">
           <mat-label class="tw-text-sm">إلى</mat-label>
           <span matSuffix
             class="sfi sfi-arrow-down tw-text-gray-500 tw-font-medium tw-mt-[-5px] tw-block tw-text-xs"></span>
@@ -31,7 +31,7 @@
       <div class="flex-box tw-gap-2">
         <!-- من اية -->
         <mat-form-field appearance="outline"
-          class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0 tw-bg-white tw-border tw-border-gray-200 tw-rounded-md">
+          class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0 tw-bg-white tw-rounded-md">
           <mat-label class="tw-text-sm">من</mat-label>
           <span matSuffix
             class="sfi sfi-arrow-down tw-text-gray-500 tw-font-medium tw-mt-[-5px] tw-block tw-text-xs"></span>
@@ -43,7 +43,7 @@
         </mat-form-field>
         <!-- إلى اية -->
         <mat-form-field appearance="outline"
-          class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0 tw-bg-white tw-border tw-border-gray-200 tw-rounded-md">
+          class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0 tw-bg-white tw-rounded-md">
           <mat-label class="tw-text-sm">إلى</mat-label>
           <span matSuffix
             class="sfi sfi-arrow-down tw-text-gray-500 tw-font-medium tw-mt-[-5px] tw-block tw-text-xs"></span>
@@ -63,7 +63,7 @@
         <label class="tw-text-xs tw-font-medium tw-mb-2 tw-block"> الجـزء</label>
         <div class="flex-box tw-gap-2">
           <mat-form-field appearance="outline"
-            class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0 tw-bg-white tw-border tw-border-gray-200 tw-rounded-md">
+            class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0  tw-rounded-md">
             <mat-label class="tw-text-sm">من</mat-label>
             <span matSuffix
               class="sfi sfi-arrow-down tw-text-gray-500 tw-font-medium tw-mt-[-5px] tw-block tw-text-xs"></span>
@@ -75,7 +75,7 @@
 
           <!-- إلى سورة -->
           <mat-form-field appearance="outline"
-            class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0 tw-bg-white tw-border tw-border-gray-200 tw-rounded-md">
+            class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0  tw-rounded-md">
             <mat-label class="tw-text-sm">إلى</mat-label>
             <span matSuffix
               class="sfi sfi-arrow-down tw-text-gray-500 tw-font-medium tw-mt-[-5px] tw-block tw-text-xs"></span>
@@ -89,7 +89,7 @@
         <label class="tw-text-xs tw-font-medium tw-mb-2 tw-block"> الحـزب</label>
         <div class="flex-box tw-gap-2">
           <mat-form-field appearance="outline"
-            class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0 tw-bg-white tw-border tw-border-gray-200 tw-rounded-md">
+            class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0  tw-rounded-md">
             <mat-label class="tw-text-sm">من</mat-label>
             <span matSuffix
               class="sfi sfi-arrow-down tw-text-gray-500 tw-font-medium tw-mt-[-5px] tw-block tw-text-xs"></span>
@@ -101,7 +101,7 @@
 
           <!-- إلى سورة -->
           <mat-form-field appearance="outline"
-            class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0 tw-bg-white tw-border tw-border-gray-200 tw-rounded-md">
+            class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0  tw-rounded-md">
             <mat-label class="tw-text-sm">إلى</mat-label>
             <span matSuffix
               class="sfi sfi-arrow-down tw-text-gray-500 tw-font-medium tw-mt-[-5px] tw-block tw-text-xs"></span>
@@ -113,58 +113,58 @@
       </div>
     </div>
     <div class="flex-c-b tw-gap-8 tw-flex-col md:tw-flex-row">
-    <div class="tw-w-full sm:tw-w-auto select-box tw-flex-1">
-      <label class="tw-text-xs tw-font-medium tw-mb-2 tw-block"> الربـع</label>
-      <div class="flex-box tw-gap-2">
-        <mat-form-field appearance="outline"
-          class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0 tw-bg-white tw-border tw-border-gray-200 tw-rounded-md">
-          <mat-label class="tw-text-sm">من</mat-label>
-          <span matSuffix
-            class="sfi sfi-arrow-down tw-text-gray-500 tw-font-medium tw-mt-[-5px] tw-block tw-text-xs"></span>
-          <!-- من سورة" -->
-          <mat-select (selectionChange)="fromRobFun($event)">
-            <mat-option *ngFor="let r of rob; let i = index" [value]="r">{{ r.rub }}</mat-option>
-          </mat-select>
-        </mat-form-field>
+      <div class="tw-w-full sm:tw-w-auto select-box tw-flex-1">
+        <label class="tw-text-xs tw-font-medium tw-mb-2 tw-block"> الربـع</label>
+        <div class="flex-box tw-gap-2">
+          <mat-form-field appearance="outline"
+            class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0  tw-rounded-md">
+            <mat-label class="tw-text-sm">من</mat-label>
+            <span matSuffix
+              class="sfi sfi-arrow-down tw-text-gray-500 tw-font-medium tw-mt-[-5px] tw-block tw-text-xs"></span>
+            <!-- من سورة" -->
+            <mat-select (selectionChange)="fromRobFun($event)">
+              <mat-option *ngFor="let r of rob; let i = index" [value]="r">{{ r.rub }}</mat-option>
+            </mat-select>
+          </mat-form-field>
 
-        <!-- إلى سورة -->
-        <mat-form-field appearance="outline"
-          class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0 tw-bg-white tw-border tw-border-gray-200 tw-rounded-md">
-          <mat-label class="tw-text-sm">إلى</mat-label>
-          <span matSuffix
-            class="sfi sfi-arrow-down tw-text-gray-500 tw-font-medium tw-mt-[-5px] tw-block tw-text-xs"></span>
-          <mat-select (selectionChange)="toRobFun($event)">
-            <mat-option *ngFor="let r of rob; let i = index" [value]="r">{{ r.rub }}</mat-option>
-          </mat-select>
-        </mat-form-field>
+          <!-- إلى سورة -->
+          <mat-form-field appearance="outline"
+            class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0  tw-rounded-md">
+            <mat-label class="tw-text-sm">إلى</mat-label>
+            <span matSuffix
+              class="sfi sfi-arrow-down tw-text-gray-500 tw-font-medium tw-mt-[-5px] tw-block tw-text-xs"></span>
+            <mat-select (selectionChange)="toRobFun($event)">
+              <mat-option *ngFor="let r of rob; let i = index" [value]="r">{{ r.rub }}</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
       </div>
-    </div>
-    <div class="tw-w-full sm:tw-w-auto select-box tw-flex-1">
-      <label class="tw-text-xs tw-font-medium tw-mb-2 tw-block"> الصفحة</label>
-      <div class="flex-box tw-gap-2">
-        <mat-form-field appearance="outline"
-          class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0 tw-bg-white tw-border tw-border-gray-200 tw-rounded-md">
-          <mat-label class="tw-text-sm">من</mat-label>
-          <span matSuffix
-            class="sfi sfi-arrow-down tw-text-gray-500 tw-font-medium tw-mt-[-5px] tw-block tw-text-xs"></span>
-          <!-- من سورة" -->
-          <mat-select (selectionChange)="fromPageFun($event)">
-            <mat-option *ngFor="let page of pages; let i = index" [value]="page">{{ page.nOFPage }}</mat-option>
-          </mat-select>
-        </mat-form-field>
+      <div class="tw-w-full sm:tw-w-auto select-box tw-flex-1">
+        <label class="tw-text-xs tw-font-medium tw-mb-2 tw-block"> الصفحة</label>
+        <div class="flex-box tw-gap-2">
+          <mat-form-field appearance="outline"
+            class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0  tw-rounded-md">
+            <mat-label class="tw-text-sm">من</mat-label>
+            <span matSuffix
+              class="sfi sfi-arrow-down tw-text-gray-500 tw-font-medium tw-mt-[-5px] tw-block tw-text-xs"></span>
+            <!-- من سورة" -->
+            <mat-select (selectionChange)="fromPageFun($event)">
+              <mat-option *ngFor="let page of pages; let i = index" [value]="page">{{ page.nOFPage }}</mat-option>
+            </mat-select>
+          </mat-form-field>
 
-        <!-- إلى سورة -->
-        <mat-form-field appearance="outline"
-          class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0 tw-bg-white tw-border tw-border-gray-200 tw-rounded-md">
-          <mat-label class="tw-text-sm">إلى</mat-label>
-          <span matSuffix
-            class="sfi sfi-arrow-down tw-text-gray-500 tw-font-medium tw-mt-[-5px] tw-block tw-text-xs"></span>
-          <mat-select (selectionChange)="toPageFun($event)">
-            <mat-option *ngFor="let page of pages; let i = index" [value]="page">{{ page.nOFPage }}</mat-option>
-          </mat-select>
-        </mat-form-field>
+          <!-- إلى سورة -->
+          <mat-form-field appearance="outline"
+            class="tw-w-full tw-flex-1 tw-mt-4 sm:tw-mt-0 tw-pb-0  tw-rounded-md">
+            <mat-label class="tw-text-sm">إلى</mat-label>
+            <span matSuffix
+              class="sfi sfi-arrow-down tw-text-gray-500 tw-font-medium tw-mt-[-5px] tw-block tw-text-xs"></span>
+            <mat-select (selectionChange)="toPageFun($event)">
+              <mat-option *ngFor="let page of pages; let i = index" [value]="page">{{ page.nOFPage }}</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
       </div>
-    </div>
     </div>
   </div>
   <!-- actions -->
@@ -181,7 +181,7 @@
   </div>
 </form>
 <!-- result -->
-<div class="tw-grid tw-grid-cols-4 tw-gap-4 tw-mt-6 tw-justify-center">
+<!-- <div class="tw-grid tw-grid-cols-4 tw-gap-4 tw-mt-6 tw-justify-center">
   <ng-container *ngFor="let row of sorats; let i = index">
     <div class="flex-box">
       <span class="tw-font-medium tw-bg-[#e4e4d0] tw-w-8 tw-min-w-[30px] tw-h-full flex-c-c">{{i + 1}}</span>
@@ -193,4 +193,17 @@
       </div>
     </div>
   </ng-container>
+</div> -->
+<div class="tw-max-w-3xl tw-mx-auto tw-mt-4" *ngIf="sorats.length > 0">
+  <ngx-audio-player [autoPlay]="false" muted="muted" [playlist]="sorats"
+    [disablePositionSlider]="msaapDisablePositionSlider" [displayRepeatControls]="msaapDisplayRepeatControls"
+    [displayVolumeControls]="msaapDisplayVolumeControls" 
+    [displayTitle]="msaapDisplayTitle" [displayPlaylist]="msaapDisplayPlayList" 
+    [tableHeader]="msaapTableHeader" [titleHeader]="msaapTitleHeader"
+    [expanded]="true">
+  </ngx-audio-player>
+</div>
+<div *ngIf="sorats.length == 0" class="tw-text-center tw-pt-20">
+  <img src="../../../../../assets/images/quran-rehal-svgrepo-com.svg" class="tw-w-24 tw-m-auto tw-opacity-40" alt="">
+  <p class="tw-text-2xl tw-font-bold tw-mt-4">لا توجد نتائج بحث !</p>
 </div>
