Audio player is done

--- a/src/app/dashboard/layout/components/header/header.component.html
+++ b/src/app/dashboard/layout/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class=" header tw-bg-[#94A684]">
-  <div class="tw-container tw-mx-auto tw-py-4 flex-c-b">
-    <div class="tw-flex tw-items-center tw-gap-14">
+  <div class="tw-container tw-mx-auto tw-py-4 flex-c-b tw-flex-col md:tw-flex-row">
+    <div class="tw-flex tw-items-center tw-gap-14 tw-mb-4 md:tw-mb-0">
       <div>
         <h1 class="tw-font-quraanFont tw-text-2xl tw-text-white tw-drop-shadow-lg tw-mb-0">قرءان كريم</h1>
       </div>
