--- a/src/app/dashboard/listen/components/form/form.component.html
+++ b/src/app/dashboard/listen/components/form/form.component.html
@@ -1,6 +1,6 @@
-<form class="tw-w-6/12 tw-m-auto tw-mt-8 tw-border tw-border-gray-200 tw-p-4">
+<form class="tw-w-10/12 lg:tw-w-6/12 tw-m-auto tw-mt-8 tw-border tw-border-gray-200 tw-p-4">
   <div class="flex-c-b tw-gap-8 tw-flex-col md:tw-flex-row">
-    <div class="tw-w-full sm:tw-w-auto select-box tw-flex-1">
+    <div class="tw-w-full md:tw-w-auto select-box tw-flex-1">
       <label class="tw-text-xs tw-font-medium tw-mb-2 tw-block">اسم السورة</label>
       <div class="flex-box tw-gap-2">
         <mat-form-field appearance="outline"
@@ -26,7 +26,7 @@
         </mat-form-field>
       </div>
     </div>
-    <div class="tw-w-full sm:tw-w-auto select-box tw-flex-1">
+    <div class="tw-w-full md:tw-w-auto select-box tw-flex-1">
       <label class="tw-text-xs tw-font-medium tw-mb-2 tw-block">رقـم الاية</label>
       <div class="flex-box tw-gap-2">
         <!-- من اية -->
@@ -59,7 +59,7 @@
   <!-- advanced search -->
   <div *ngIf="isOpen" class="tw-mt-4 tw-border-t tw-border-gray-200 tw-pt-4 tw-space-y-3">
     <div class="flex-c-b tw-gap-8 tw-flex-col md:tw-flex-row">
-      <div class="tw-w-full sm:tw-w-auto select-box tw-flex-1">
+      <div class="tw-w-full md:tw-w-auto select-box tw-flex-1">
         <label class="tw-text-xs tw-font-medium tw-mb-2 tw-block"> الجـزء</label>
         <div class="flex-box tw-gap-2">
           <mat-form-field appearance="outline"
@@ -85,7 +85,7 @@
           </mat-form-field>
         </div>
       </div>
-      <div class="tw-w-full sm:tw-w-auto select-box tw-flex-1">
+      <div class="tw-w-full md:tw-w-auto select-box tw-flex-1">
         <label class="tw-text-xs tw-font-medium tw-mb-2 tw-block"> الحـزب</label>
         <div class="flex-box tw-gap-2">
           <mat-form-field appearance="outline"
@@ -113,7 +113,7 @@
       </div>
     </div>
     <div class="flex-c-b tw-gap-8 tw-flex-col md:tw-flex-row">
-      <div class="tw-w-full sm:tw-w-auto select-box tw-flex-1">
+      <div class="tw-w-full md:tw-w-auto select-box tw-flex-1">
         <label class="tw-text-xs tw-font-medium tw-mb-2 tw-block"> الربـع</label>
         <div class="flex-box tw-gap-2">
           <mat-form-field appearance="outline"
@@ -139,7 +139,7 @@
           </mat-form-field>
         </div>
       </div>
-      <div class="tw-w-full sm:tw-w-auto select-box tw-flex-1">
+      <div class="tw-w-full md:tw-w-auto select-box tw-flex-1">
         <label class="tw-text-xs tw-font-medium tw-mb-2 tw-block"> الصفحة</label>
         <div class="flex-box tw-gap-2">
           <mat-form-field appearance="outline"
@@ -181,29 +181,4 @@
   </div>
 </form>
 <!-- result -->
-<!-- <div class="tw-grid tw-grid-cols-4 tw-gap-4 tw-mt-6 tw-justify-center">
-  <ng-container *ngFor="let row of sorats; let i = index">
-    <div class="flex-box">
-      <span class="tw-font-medium tw-bg-[#e4e4d0] tw-w-8 tw-min-w-[30px] tw-h-full flex-c-c">{{i + 1}}</span>
-      <div class="tw-rounded-none tw-border tw-border-[#e4e4d0] tw-bg-[#f1f3f4]">
-        <audio [id]="'surahPlayer' + i" controls="controls" (play)="onPlay(i)" (ended)="audioEnded(i)"
-          class="tw-max-w-[265px]">
-          <source id="activeAyah" src="{{ row }}" title="{{ 1 }}" type="audio/mp3" />
-        </audio>
-      </div>
-    </div>
-  </ng-container>
-</div> -->
-<div class="tw-max-w-3xl tw-mx-auto tw-mt-4" *ngIf="sorats.length > 0">
-  <ngx-audio-player [autoPlay]="false" muted="muted" [playlist]="sorats"
-    [disablePositionSlider]="msaapDisablePositionSlider" [displayRepeatControls]="msaapDisplayRepeatControls"
-    [displayVolumeControls]="msaapDisplayVolumeControls" 
-    [displayTitle]="msaapDisplayTitle" [displayPlaylist]="msaapDisplayPlayList" 
-    [tableHeader]="msaapTableHeader" [titleHeader]="msaapTitleHeader"
-    [expanded]="true">
-  </ngx-audio-player>
-</div>
-<div *ngIf="sorats.length == 0" class="tw-text-center tw-pt-20">
-  <img src="../../../../../assets/images/quran-rehal-svgrepo-com.svg" class="tw-w-24 tw-m-auto tw-opacity-40" alt="">
-  <p class="tw-text-2xl tw-font-bold tw-mt-4">لا توجد نتائج بحث !</p>
-</div>
+<app-audio-player [data]="sorats"></app-audio-player>
