--- a/src/app/dashboard/listen/components/form/form.component.scss
+++ b/src/app/dashboard/listen/components/form/form.component.scss
@@ -42,4 +42,7 @@
     .mat-expansion-panel .mat-expansion-panel-header{
         padding: 0 10px 0 5px
     }
+    .mat-expansion-panel{
+        min-width: auto !important;
+    }
 }
