--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Alkalami&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200;400;500;600;700&display=swap');
 
 @import "tailwindcss/base";
 
@@ -10,6 +11,7 @@
 
 body {
   background: #f3f3f3;
+  font-family: 'Cairo', sans-serif !important;
   [dir="rtl"] & {
     direction: rtl;
     text-align: right;
